--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "cd frontend && npm test && cd ..",
     "karma": "cd frontend && npm run karma && cd ..",
     "webpack": "cd frontend && npm run webpack && cd ..",
-    "webpack-watch": "cd frontend && npm run webpack-watch"
+    "webpack-watch": "cd frontend && npm run webpack-watch",
+    "webpack-watch-with-test": "cd frontend && npm run webpack-watch-with-test"
   },
   "private": true,
   "engines": {
